# digestible

./: CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: commit.yml  release.yml
digestible/: CHANGELOG.md  Cargo.toml
digestible/src/: digester.rs  digester_writer.rs  digestible-macro.md  hash_digester.rs  lib.rs  to_base64.rs
digestible/src/_private/: mod.rs
digestible/src/digest_with/: atomics.rs  floats.rs  mod.rs
digestible/src/digestible/: alloc_types.rs  atomic.rs  core_types.rs  hash_hack.rs  internal_macros.rs  mod.rs  num_types.rs  std_types.rs  tuples.rs
digestible/src/digestible/extern_crates/: _bytes.rs  _chrono.rs  _serde_json.rs  _uuid.rs  mod.rs
digestible/src/type_id/: mod.rs  std_type_id_hasher.rs
digestible/tests/: generics.rs  test.rs
macros/: CHANGELOG.md  Cargo.toml
macros/src/: consts.rs  container_attrs.rs  expand_enum.rs  expand_struct.rs  fields.rs  lib.rs  paths.rs  shared.rs  utils.rs
src/: digester.rs  lib.rs
src/digestible/: alloc_types.rs  atomic.rs  internal_macros.rs  mod.rs  num_types.rs
src/digestible/extern_crates/: _bytes.rs
tests/: test.rs
