[package]
name = "digestible-macros"
version.workspace=true
edition.workspace=true
authors.workspace=true
description = "Macros for generating digest implementations"
license.workspace=true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1"
syn = { version = "2", features = ["full", "extra-traits"] }